tests/data/parseerror/invalid-file-4.php
<?php

namespace invalid;

use foo\;
